# spotify-auto-playlists

./: .env  .gitignore  Makefile  README.md  api_backend.py  api_main.py  cache_manager.py  classifier.py  cli_utils.py  config.py  external_features.py  fastapi_app.py  fs_utils.py  gui_main.py  main.py  playlist_manager.py  pyproject.toml  reporting.py  spotify_client.py  spotify_token.json
app/: config.py
app/api/: __init__.py  auth.py  fastapi_app.py  pipeline.py
app/api/auth/: routes.py  schemas.py
app/api/data/: routes.py
app/api/pipeline/: classify.py  diff.py  external.py  health.py  jobs.py  multi_sources.py  playlists.py  schemas.py  tracks.py
app/api/spotify/: playlists.py  schemas.py
app/core/: __init__.py  cli_utils.py  fs_utils.py  logging_config.py  logging_utils.py  models.py  rules.py
app/data/: __init__.py  cache.py  enrichments.py  jobs.py  repositories.py  rules.py
app/pipeline/: __init__.py  cache_manager.py  classifier.py  classifiers_registry.py  external_features.py  jobs_runner.py  orchestration.py  playlist_manager.py  providers.py  reporting.py  rules_engine.py  sources_manager.py
app/spotify/: __init__.py  auth.py  playlists.py  sources.py  tracks.py
cache/: track_classification_cache.json  tracks.json
docs/: api_enrichments.md  api_rules.md  architecture.md  backend_overview.md  coding_guidelines.md  data_flow.md  frontend_design.md  roadmap.md  rules_engine.md
scripts/: smoke.py  smoke_test.py
spotify_auto_playlists.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_api_rules_endpoints.py  test_data_rules.py  test_enrichments_cache.py  test_feature_providers.py  test_fs_utils.py  test_playlist_manager_rules_preview.py  test_rules_engine.py
